# Physics-Projects

./: README.md
DarkPhoton/: BranchingRatios.nb  DarkPhotonILC.aux  DarkPhotonILC.out  DarkPhotonILC.tex
Dynkin_Thresholds/: LieArt notebook.nb  RGErun_SM_RGEs.m  RGErun_SM_RGEs.nb  SM_RGEs.nb  dl.py
ILC_PhotonFusion/: 250GeV_LBL.txt  250GeV_yield.txt  500GeV_LBL.txt  500GeV_yield.txt  ALP_PhotonFusion.nb  LHCexclusion.csv  Photon_luminosity.nb  Photonfusion_bounds_250GeV.csv  Photonfusion_bounds_500GeV.csv  Pvalue_eval.py  StandardHypoTestInvDemo.C  alp_xsec.py  exclusion_plot.py  gammagammaFexclusion.csv  roofit.C
NSSI-Supernova/: NSSI-operators-expanded.nb
Scalar_Extension/: OppositeSignWW.nb  SameSignWW.nb  SingletModelCreation.nb  SingletModelSmallMassCreation.nb  XSM_madgraphVBS_instructions.rtf
Xi_Jets/: Higgs_reco.C  Photons.C  VertexTest.C  XiJet_Yield.nb  XiJets.C  fake_jets.C  make_plots.C
ZDecay/: BelleIIdata.csv  ILCdata.csv  Singlet_hypcharge_portal.nb  ZphiAdecay.nb  decay_length.nb  decaylength.py  (+3 more)
g4psi/: CMakeLists.txt  Doxyfile  GNUmakefile  README  build.sh  g4PSI.cc
g4psi/include/: FTFP_BERT_MUSE.hh  FTFP_BERT_MUSE.icc  G4CoulombScatteringMUSE.hh  G4EmStandardPhysicsMUSE.hh  G4WentzelOKandVIxSectionMUSE.hh  G4eCoulombScatteringModelMUSE.hh  g4PSIActionInitialization.hh  g4PSIAnalysisManager.hh  g4PSIBeamCherenkov.hh  g4PSIBeamMonitor.hh  g4PSIBeamSC.hh  g4PSICal.hh  g4PSIChamberBase.hh  g4PSIChamberCylinder.hh  g4PSIChamberTrapezoid.hh  g4PSIDetectorBase.hh  g4PSIDetectorConstruction.hh  g4PSIDetectorMessenger.hh  g4PSIDetectorParts.hh  g4PSIEvent.hh  g4PSIEventAction.hh  g4PSIGEM.hh  g4PSINaI.hh  g4PSIPrimaryGeneratorAction.hh  g4PSIPrimaryGeneratorMessenger.hh  g4PSIRun.hh  g4PSIRunAction.hh  g4PSIRunActionMessenger.hh  g4PSISCWall.hh  g4PSISPS.hh  g4PSISTC.hh  g4PSISTT.hh  g4PSIScintillatorHit.hh  g4PSIScintillatorSD.hh  g4PSISteppingAction.hh  g4PSITarget.hh  g4PSITargetBase.hh  g4PSITargetCylinder.hh  g4PSITargetGrid.hh  g4PSITargetHit.hh  (+9 more)
g4psi/mac/: Settings.mac  batch.mac  batch_beam_decay.mac  batch_cosmic.mac  batch_full4pi.mac  fig.mac  gui_km.mac  gui_ss.mac  test.mac  vis_km.mac  vis_ss.mac
g4psi/scripts/: run_trigger_g4PSI
g4psi/src/: G4CoulombScatteringMUSE.cc  G4EmStandardPhysicsMUSE.cc  G4WentzelOKandVIxSectionMUSE.cc  G4eCoulombScatteringModelMUSE.cc  g4PSIActionInitialization.cc  g4PSIAnalysisManager.cc  g4PSIBOptrChangeCrossSection.cc  g4PSIBOptrMultiParticleChangeCrossSection.cc  g4PSIBeamCherenkov.cc  g4PSIBeamMonitor.cc  g4PSIBeamSC.cc  g4PSICal.cc  g4PSIChamberBase.cc  g4PSIChamberCylinder.cc  g4PSIChamberTrapezoid.cc  g4PSIDetectorBase.cc  g4PSIDetectorConstruction.cc  g4PSIDetectorMessenger.cc  g4PSIDetectorParts.cc  g4PSIEventAction.cc  g4PSIGEM.cc  g4PSINaI.cc  g4PSIPrimaryGeneratorAction.cc  g4PSIPrimaryGeneratorMessenger.cc  g4PSIRun.cc  g4PSIRunAction.cc  g4PSIRunActionMessenger.cc  g4PSISCWall.cc  g4PSISPS.cc  g4PSISTC.cc  g4PSISTT.cc  g4PSIScintillatorHit.cc  g4PSIScintillatorSD.cc  g4PSISteppingAction.cc  g4PSITarget.cc  g4PSITargetBase.cc  g4PSITargetCylinder.cc  g4PSITargetGrid.cc  g4PSITargetHit.cc  g4PSITargetJeru.cc  (+8 more)
(+985 files in other folders)
